# Self-Remap-Code

./: CMakeLists.txt  HostileHeader.h  HostileMacro.h  HostileProcedure.h  HostileStructures.h  README.md  no_idata.ld
Code/: HostilePrototype.h  HostileType.h  POC.c  POC.h  main.c
